--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,18 @@ dependencies:
   flutter_map: ^6.1.0
   latlong2: ^0.9.0
 
+    # --- DEPENDENSI BARU DITAMBAHKAN DI SINI ---
+  # Untuk state management (menangani status login admin)
+  provider: ^6.1.2
+  # Untuk komunikasi dengan API/server
+  http: ^1.2.1
+  # Untuk menyimpan sesi login admin di perangkat
+  shared_preferences: ^2.2.3
+  # Untuk mendapatkan lokasi GPS pengguna
+  geolocator: ^12.0.0
+  # Untuk memilih gambar dari galeri atau kamera
+  image_picker: ^1.1.2
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
