--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   geolocator: ^12.0.0
   # Untuk memilih gambar dari galeri atau kamera
   image_picker: ^1.1.2
+  geocoding: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
